...
                          left: 10,
                          right: 10,
                        ),
                      ),
                      Expanded(
                        child: Container(
                          key: Key('login_button'),
                          height: 45,
                          child: RaisedButton(
                            child: Text(
                              'LOGIN',
                              style: TextStyle(
                                fontSize: 20,
...
                  padding: EdgeInsets.only(
                    right: 10,
                    left: 10,
                  ),
                ),
                Text(
                  'Login With'.toUpperCase(),
                  style: TextStyle(
                    color: Colors.white,
                    letterSpacing: 1,
                  ),
                ),
                Padding(
...
                    letterSpacing: 0.75,
                    color: Colors.white,
                  ),
                ),
                GestureDetector(
                  child: Text(
                    'SIGN UP'.toUpperCase(),
                    style: TextStyle(
                      letterSpacing: 0.75,
                      color: Theme.of(context).accentColor,
                    ),
                  ),
                  onTap: () {
...
